--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-router-dom": "^6.22.0",
     "react-toastify": "^10.0.4",
     "react-tooltip": "^5.26.2",
+    "recharts": "^2.12.0",
     "simple-statistics": "^7.8.3"
   },
   "devDependencies": {
